# replay-to-rocketsim

./: .gitignore  AGENTS.md  Cargo.toml  README.md
benches/: parse_replays.rs
examples/: audit_car_state.rs  audit_prediction.rs  convert.rs  inspect_attributes.rs  inspect_events.rs  profile_convert.rs
src/: actor.rs  aerial.rs  arena_config.rs  arena_sync.rs  attributes.rs  body.rs  controls.rs  converter.rs  error.rs  lib.rs  metadata.rs  phys.rs  timing.rs
src/actor/: attrs.rs  events.rs  metadata.rs
src/metadata/: derived.rs  gameplay.rs  replay_header.rs  types.rs
tests/: api.rs
