[package]
name = "replay-to-rocketsim"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bench]]
harness = false
name = "parse_replays"

[dependencies]
boxcars = "0.11.4"
glam = "0.33.2"
rocketsim = {
  git = "https://github.com/VirxEC/RocketSim.git",
  branch = "supersonic",
  version = "0.2.0"
}
rustc-hash = "2.1.3"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.0"

[lints.clippy]
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
too_many_lines = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
# nursery = "warn"
